EX-39 | [BE] Show Course API (#17)
* EX-39 | [BE] Show Course API
