# swagger/v1/swagger.yaml
@@ -32,6 +32,39 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/errors/unauthorized"
+  "/staff_portal/courses/{id}":
+    get:
+      summary: Show Course Info
+      tags:
+      - Staff Portal / Course
+      description: |-
+        This API is responsible for:
+
+              * Showing the Course Info
+      operationId: showCourse
+      parameters:
+      - "$ref": "#/components/global_parameters/id_param"
+      security:
+      - staff_auth: []
+      responses:
+        '200':
+          description: Course Info Showed successfully
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/responses/staff_portal/show/course_info"
+        '401':
+          description: One of the following errors
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/errors/unauthorized"
+        '404':
+          description: You may have no access to this course or it doesnt exist
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/errors/not_found"
   "/staff_portal/sessions":
     post:
       summary: Staff Login
@@ -100,6 +133,39 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/errors/unauthorized"
+  "/student_portal/courses/{id}":
+    get:
+      summary: Show Course Info
+      tags:
+      - Student Portal / Course
+      description: |-
+        This API is responsible for:
+
+              * Showing the Course Info
+      operationId: showCourse
+      parameters:
+      - "$ref": "#/components/global_parameters/id_param"
+      security:
+      - student_auth: []
+      responses:
+        '200':
+          description: Course Info Showed successfully
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/responses/student_portal/show/course_info"
+        '401':
+          description: One of the following errors
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/errors/unauthorized"
+        '404':
+          description: You may have no access to this course or it doesnt exist
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/errors/not_found"
   "/student_portal/sessions":
     post:
       summary: Student Login
@@ -190,7 +256,7 @@ components:
       - id
       - faculty_name
       - University_name
-    student:
+    detailed_student:
       type: object
       properties:
         id:
@@ -222,6 +288,30 @@ components:
       - username
       - faculty_id
       - academic_id
+    student:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        first_name:
+          type: string
+          example: Ahmed
+        last_name:
+          type: string
+          example: Gamal
+        username:
+          type: string
+          example: '18010083'
+        role:
+          type: string
+          example: student
+      required:
+      - id
+      - first_name
+      - last_name
+      - username
+      - role
     student_session:
       type: object
       properties:
@@ -250,7 +340,7 @@ components:
       - username
       - role
       - auth_token
-    staff:
+    detailed_staff:
       type: object
       properties:
         id:
@@ -281,6 +371,30 @@ components:
       - last_name
       - username
       - faculty_id
+      - role
+    staff:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        first_name:
+          type: string
+          example: Ahmed
+        last_name:
+          type: string
+          example: Gamal
+        username:
+          type: string
+          example: jimmy
+        role:
+          type: string
+          example: instructor
+      required:
+      - id
+      - first_name
+      - last_name
+      - username
       - role
     staff_session:
       type: object
@@ -326,6 +440,36 @@ components:
       - id
       - title
       - code
+    detailed_course_info:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        title:
+          type: string
+          example: Database
+        code:
+          type: string
+          example: CSE512
+        credit_hours:
+          type: integer
+          example: 3
+        instructors:
+          type: array
+          items:
+            "$ref": "#/components/schemas/staff"
+        students:
+          type: array
+          items:
+            "$ref": "#/components/schemas/student"
+      required:
+      - id
+      - title
+      - code
+      - credit_hours
+      - instructors
+      - students
   errors:
     invalid_credentials:
       type: object
@@ -336,6 +480,16 @@ components:
         message:
           type: string
           example: Invalid credentials
+    not_found:
+      type: object
+      properties:
+        status:
+          type: string
+          example: error
+        message:
+          type: string
+          example: Unfortunately this course does not exist or you do not have permissions
+            to access
     unauthorized:
       type: array
       items:
@@ -368,6 +522,19 @@ components:
               description: 'This message is the error message in case of status: "error"
                 otherwise it is null'
               example: 
+        course_info:
+          type: object
+          properties:
+            status:
+              type: string
+              example: success
+            course_info:
+              "$ref": "#/components/schemas/detailed_course_info"
+            message:
+              type: string
+              description: 'This message is the error message in case of status: "error"
+                otherwise it is null'
+              example: 
       list:
         courses_list:
           type: object
@@ -394,6 +561,19 @@ components:
               example: success
             student:
               "$ref": "#/components/schemas/staff_session"
+            message:
+              type: string
+              description: 'This message is the error message in case of status: "error"
+                otherwise it is null'
+              example: 
+        course_info:
+          type: object
+          properties:
+            status:
+              type: string
+              example: success
+            course_info:
+              "$ref": "#/components/schemas/detailed_course_info"
             message:
               type: string
               description: 'This message is the error message in case of status: "error"
